fix(BlockImageTextParallax): added overflow: visible to container to prevent parallax image getting cut off

--- a/Components/BlockImageTextParallax/_style.scss
+++ b/Components/BlockImageTextParallax/_style.scss
@@ -12,6 +12,10 @@
     padding: $component-spacing-desktop 0;
   }
 
+  .container {
+    overflow: visible;
+  }
+
   .box {
     @media (min-width: $breakpoint-tablet-horizontal) {
       align-items: center;
